# boilerplate-python

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml
.github/: dependabot.yml
.github/actions/: docker-setup.yml
.github/actions/docker-setup/: action.yml
.github/actions/python-setup/: action.yml
.github/workflows/: auto-pr-review.yml  codeql-analysis.yml  dependabot-auto-merge.yml  dependency-review.yml  docker-ci.yml  docker-publish.yml  python-app.yml  python-ci.yml  python-codeql.yml  python-publish.yml  scorecards.yml
doctrees/: authors.doctree  environment.pickle  index.doctree  license.doctree  sample.doctree
doctrees/api/: boilerplate_python.doctree  flask_app.doctree  modules.doctree  my_project.doctree
html/: authors.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  sample.html  search.html  searchindex.js
html/_modules/: index.html
html/_modules/flask_app/: hello_world.html
html/_modules/my_project/: skeleton.html
html/_sources/api/: boilerplate_python.rst.txt  flask_app.rst.txt  modules.rst.txt  my_project.rst.txt
html/api/: boilerplate_python.html  flask_app.html  modules.html  my_project.html
plantuml/: python-ci-summary.puml  python-publish-summary.puml  summary.puml
src/flask_app/: hello_world.py
tests/: test_hello_world.py  test_skeleton.py
tools/: release.py  sbom.py
