[tool.poetry]
authors = ["kannkyo <15080890+kannkyo@users.noreply.github.com>"]
description = "boilerplate project for python"
name = "boilerplate-python"
version = "0.1.0"

[tool.poetry.dependencies]
Flask = "^2.0.1"
python = "^3.8"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
flake8 = "^3.9.2"
pycodestyle = "^2.7.0"
pytest = "^5.2"
pytest-cov = "^2.12.1"
toml = "^0.10.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
